# hol-introduction-to-programming

./: .gitignore  .readthedocs.yaml  README.rst  pyproject.toml
_static/css/: custom.css
_templates/: breadcrumbs.html
docs/doctrees/: environment.pickle  index.doctree
docs/doctrees/materials/answer-mini-practice/: answer-session-01.doctree  answer-session.doctree
docs/doctrees/materials/exercise/: exercise.doctree
docs/doctrees/materials/preface/: ide-introduction.doctree  instalation-guide.doctree  java-introduction.doctree
docs/doctrees/materials/session-01/: creating-project.doctree  debugging.doctree  input-output.doctree  mini-practice.doctree  variable-datatype.doctree
docs/doctrees/materials/session-02/: character.doctree  double.doctree  math.doctree  mini-practice-02.doctree  mini-practice.doctree  random.doctree  string.doctree  typecasting.doctree  wrapper.doctree
docs/doctrees/materials/session-03/: arithmetic-operator.doctree  assignment-operator.doctree  bitwise-operator.doctree  logical-operator.doctree  mini-practice-03.doctree  mini-practice.doctree  operator-operand.doctree  precendence-associative-operator.doctree  relational-operator.doctree
docs/doctrees/materials/session-04/: if-else.doctree  mini-practice-04.doctree  mini-practice.doctree  nested-if.doctree  switch-case.doctree
docs/doctrees/materials/session-05/: do-while.doctree  for.doctree  (+4 more)
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
docs/source/: conf.py  index.rst  introduction.rst
(+357 files in other folders)
