[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hol-introduction-to-programming"
authors = [
    {name = "Elizabeth Erika Felia Oroh ER22-2", email = "elizabeth.oroh@binus.edu"},
    {name = "Renaldy RX19-2", email = "renaldy@binus.edu"}
]
dynamic = ["version", "description"]
